Replace much of authenticator components/naming with login-consent components/naming, begin work on login popup UI

--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js css-menubar" lang="en">
+<html class="no-js css-menubar" lang="en" style="height: 100%;">
 	<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
     <meta name="author" content="Michael Filip Toutonghi">
     <title>Verus Authenticator</title>
 	</head>
-	<body id="body" class="index-body">
-		<div id="app" class="full-height unselectable"></div>
+	<body id="body" class="index-body" style="height: 100%;">
+		<div id="app" style="height: 100%;"></div>
 	</body>
 </html>
